--- a/src/styles.css
+++ b/src/styles.css
@@ -3,81 +3,61 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+
 html {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'EB Garamond', serif;
+  position: relative;
+  min-height: 100vh;
+  background: #fff;
 }
-body {
-  background: #eee;
-  padding: 0 16px;
+
+a, a:visited, a:hover,i {
+    color: inherit;
+    text-decoration: none;
+}
+
+button {
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold;
+  font-size: 12px;
+  cursor: pointer;
+  outline: none;
+  border: none;
+  position: relative;
+  background-color: #fff;
 }
 
 header {
-  background-color: #f5ba13;
-  margin: auto -16px;
-  padding: 16px 32px;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
-}
-
-header h1 {
-  color: #fff;
-  font-family: "McLaren", cursive;
-  font-weight: 200;
-}
-
-footer {
-  position: absolute;
+  margin: auto 110px;
+  padding: 20px 32px 20px 32px;
+  border-bottom: #000 2px solid;
   text-align: center;
-  bottom: 0;
-  width: 100%;
-  height: 2.5rem;
-}
-
-footer p {
-  color: #ccc;
-}
-.note {
-  background: #fff;
-  border-radius: 7px;
-  box-shadow: 0 2px 5px #ccc;
-  padding: 10px;
-  width: 240px;
-  margin: 16px;
-  float: left;
-}
-.note h1 {
-  font-size: 1.1em;
-  margin-bottom: 6px;
-}
-.note p {
-  font-size: 1.1em;
-  margin-bottom: 10px;
-  white-space: pre-wrap;
-  word-wrap: break-word;
-}
-
-.note button {
-  position: relative;
-  float: right;
-  margin-right: 10px;
   color: #f5ba13;
-  border: none;
-  width: 36px;
-  height: 36px;
-  cursor: pointer;
-  outline: none;
 }
 
-form.create-note {
+.page-title {
+  font-size: 38px;
+  color: #000;
+  font-family: 'Anton', sans-serif;
+}
+
+.paragraph {
+  color: #000;
+}
+
+form {
+  border: #000 1px solid;
   position: relative;
-  width: 480px;
+  width: 560px;
   margin: 30px auto 20px auto;
   background: #fff;
   padding: 15px;
-  border-radius: 7px;
-  box-shadow: 0 1px 5px rgb(138, 137, 137);
+  padding-bottom: 26px;
 }
-form.create-note input,
-form.create-note textarea {
+
+form input,
+form textarea {
   width: 100%;
   border: none;
   padding: 4px;
@@ -86,17 +66,57 @@ form.create-note textarea {
   font-family: inherit;
   resize: none;
 }
-form.create-note button {
-  position: absolute;
-  right: 18px;
-  bottom: -18px;
-  background: #f5ba13;
-  color: #fff;
-  border: none;
-  border-radius: 50%;
-  width: 36px;
+
+.container_note {
+  flex-grow: 1;
+  margin: 20px 80px;
+}
+
+.note {
+  border-bottom: #000 1px solid;
+  padding: 10px;
+  padding-bottom: 0;
+  width: 240px;
+  float: left;
+  margin: 10px 40px 40px 40px;
+}
+
+.note h1 {
+  font-weight: 400;
+  font-size: 20px;
+  margin-bottom: 6px;
+}
+
+.note p {
+  font-weight: 300;
+  margin-bottom: 4px;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
+
+form button, .delete-button {
+  float: right;
+}
+
+form button {
+  margin-right: 3px;
+  color: #f5ba13;
+}
+
+.delete-button {
   height: 36px;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
-  cursor: pointer;
-  outline: none;
+  color: #e12929;
+}
+
+footer {
+  position: fixed;
+  text-align: center;
+  bottom: 0;
+  width: 100%;
+  height: 2rem;
+}
+
+footer p {
+  color: #ccc;
+  font-size: 14px;
 }
